Add a empty local.css for easy customization.

--- a/static/index.html
+++ b/static/index.html
@@ -64,6 +64,7 @@
     text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
   }
 </style>
+<link rel="stylesheet" type="text/css" href="local.css" />
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="http://underscorejs.org/underscore-min.js"></script>
