Add external javascript dependencies using bower.

--- a/static/index.html
+++ b/static/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="dvizz.css" />
     <link rel="stylesheet" type="text/css" href="local.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="http://underscorejs.org/underscore-min.js"></script>
+    <script src="js/jquery/dist/jquery.min.js"></script>
+    <script src="js/underscore/underscore-min.js"></script>
+    <script src="js/d3/d3.min.js"></script>
   </head>
   <body>
-    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script>
         // A list of node objects.  We represent each node as {id: "name"}, but the D3
         // system will decorate the node with addtional fields, notably x: and y: for
