Fix task label if spec's image name does not contain a hash suffix.

--- a/static/index.html
+++ b/static/index.html
@@ -215,7 +215,9 @@
                                 }
 
                                 /* strip image hash */
-                                name = name.slice(0, name.indexOf('@'));
+                                if(name.indexOf('@') > -1) {
+                                    name = name.slice(0, name.indexOf('@'));
+                                }
 
                                 /* strip implicit 'latest' tag */
                                 if(name.substr(-7) == ":latest") {
